--- a/BookPoolV2/Content/css/shop/styles.css
+++ b/BookPoolV2/Content/css/shop/styles.css
@@ -26,7 +26,7 @@ body{
 }
 
 .smallImage {
-    width: 100px !important;
+    /*width: 100px !important;*/
     /*height: 100px !important;*/
     /*border-radius: 15px;*/
 }
