--- a/BookPoolV2/Views/Shared/_Filter.cshtml
+++ b/BookPoolV2/Views/Shared/_Filter.cshtml
@@ -1,5 +1,5 @@
 ﻿
-<div id="mainSortByFilter" style="background: white; height:50px;padding-top:5px;">
+<div id="mainSortByFilter" style="background: white; height:50px;padding-top:5px;margin-bottom:50px;">
     <div class="row">
         <div class="col s12 m12 l12 noscroll" style="overflow:auto;">
             <div style="min-width: 800px;">
