--- a/BookPoolV2/Views/Checkout/Index.cshtml
+++ b/BookPoolV2/Views/Checkout/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@{ 
+@{
     Layout = "~/Views/Shared/_Layout_Out.cshtml";
 }
 
@@ -287,3 +287,27 @@
 <div style="width:100%; height:200px;">
 
 </div>
+
+
+
+<script type="text/javascript">
+
+        $(document).ready(function () {
+
+            window.onscroll = function () { stickTotalBars() };
+
+            var totalhHeader = document.getElementById("totalAmountContainer");
+            var stickyTotal = totalhHeader.offsetTop;
+
+            function stickTotalBars() {
+                console.log(stickyTotal);
+                if (window.pageYOffset > stickyTotal) {
+                    totalhHeader.classList.add("stickySearchBar");
+                } else {
+                    totalhHeader.classList.remove("stickySearchBar");
+                }
+            }
+
+        });
+
+</script>
