--- a/BookPoolV2/Views/Shared/_AvailableBook.cshtml
+++ b/BookPoolV2/Views/Shared/_AvailableBook.cshtml
@@ -21,21 +21,56 @@
         <div class="card-body">
             <div style="width:100%;">
                 <div style="float:left;width: 100%;padding-right: 15px;">
-                    <h5 class="card-title" style="padding-top:0px;margin-top:0px;margin-bottom:0px;color: black;font-size: 16px;">
+                    <h5 class="card-title" style="padding-top:0px;margin-top:0px;margin-bottom:0px;color: black;font-size: 16px;font-weight:bold;">
                         @Model.BookName
                     </h5>
+                    @{
+                        if (Model.Authors != null)
+                        {
+                            <h5 class="card-title" style="padding-top:0px;color: black;font-size: 12px;">
+                                by @string.Join(",", Model.Authors)
+                            </h5>
+                        }
+                    }
                     <p class="card-text" style="margin-bottom:6px;margin-top:6px;color:var(--primaryGrey);">
                         Price: @Model.Price.ToString("C0", CultureInfo.CurrentCulture) L.L.
                     </p>
                     <p class="card-text" style="margin-bottom:6px;margin-top:6px; font-size:12px; color:forestgreen;">
                         Someone wants to sell this book
                     </p>
-                    <p class="card-text" style="margin-bottom: 0px;margin-top:6px;color:black;font-size:13px;font-weight:bold;">
-                        <i class="material-icons" style="font-size:12px;">location_on</i> Beirut
+                    <p class="card-text" style="margin-bottom: 0px; margin-top: 6px; color: black; font-size: 13px; font-weight: bold;">
+                        @Model.BookCondition
                     </p>
                 </div>
                 <div style="float:right;position: absolute;right: 0;">
-                    <span class="badge" style="color:white; background-color:#82AD3A;">@Model.AverageRating</span>
+                    @{
+                        string averageRating = Model.AverageRating.ToString();
+                        string backgroundColor = "transparent";
+
+                        if (Model.AverageRating == 0)
+                        {
+                            averageRating = "N/A";
+                            backgroundColor = "grey";
+                        }
+                        else if (Model.AverageRating < 2)
+                        {
+                            backgroundColor = "yellow";
+                        }
+                        else if (Model.AverageRating < 3)
+                        {
+                            backgroundColor = "orange";
+                        }
+                        else if (Model.AverageRating < 4)
+                        {
+                            backgroundColor = "green";
+                        }
+                        else if (Model.AverageRating < 5)
+                        {
+                            backgroundColor = "forestgreen";
+                        }
+
+                        <span class="badge" style="color:white; background-color:@backgroundColor;">@averageRating</span>
+                    }
                 </div>
             </div>
         </div>
