--- a/BookPoolV2/Views/Shared/_MyBook.cshtml
+++ b/BookPoolV2/Views/Shared/_MyBook.cshtml
@@ -1,9 +1,10 @@
 ﻿@using BookPool.DataObjects.DTO
+@using System;
+@using System.Globalization;
 
 @model BookPoolResult
 
-
-<div class="card" style="box-shadow:none; -webkit-box-shadow:none;">
+<div class="card" style="box-shadow:none; -webkit-box-shadow:none;" data-BookID="@Model.ID">
     <div class="card-horizontal" style="overflow: hidden;">
         <div class="img-square-wrapper">
             @{
@@ -20,27 +21,26 @@
         <div class="card-body">
             <div style="width:100%;">
                 <div style="float:left;width: 100%;padding-right: 15px;">
-                    <h5 class="card-title" style="padding-top:0px;color: black;font-size: 16px;font-weight:bold;">
+                    <h5 class="card-title" style="padding-top:0px;margin-top:0px;margin-bottom:0px;color: black;font-size: 16px;font-weight:bold;">
                         @Model.BookName
                     </h5>
                     @{
                         if (Model.Authors != null)
                         {
-                            <h5 class="card-title" style="padding-top:0px;margin-top:0px;margin-bottom:0px;color: black;font-size: 12px;">
+                            <h5 class="card-title" style="padding-top:0px;color: black;font-size: 12px;">
                                 by @string.Join(",", Model.Authors)
                             </h5>
                         }
                     }
                     <p class="card-text" style="margin-bottom:6px;margin-top:6px;color:var(--primaryGrey);">
-                        Price: Not Available
+                        Price: @Model.Price.ToString("C0", CultureInfo.CurrentCulture) L.L.
                     </p>
-                    <p class="card-text" style="margin-bottom:6px;margin-top:6px; font-size:12px; color:var(--secondaryOrange)">
-                        No one has offered to sell this book
+                    <p class="card-text" style="margin-bottom:6px;margin-top:6px; color:var(--secondaryOrange)">
+                        @Model.BookCondition
                     </p>
-                    <p class="card-text" style="margin-bottom:6px;margin-top:6px; font-size:12px; color:var(--secondaryOrange)">
-                        <button type="button" class="waves-effect waves-light btn-small modal-trigger" data-target="search-for-my-book-modal">
-                            <i class="material-icons left">search</i>
-                            Find it for me
+                    <p class="card-text" style="">
+                        <button class="btn waves-effect waves-light red lighten-2">
+                            Delete
                         </button>
                     </p>
                 </div>
@@ -78,3 +78,4 @@
         </div>
     </div>
 </div>
+
