--- a/BookPoolV2/Views/Shared/_AvailableBook.cshtml
+++ b/BookPoolV2/Views/Shared/_AvailableBook.cshtml
@@ -4,7 +4,7 @@
 
 @model BookPoolResult
 
-<div class="card gotoproduct" style="box-shadow:none; -webkit-box-shadow:none;" data-BookID="@Model.ID">
+<div class="card gotoproduct" style="box-shadow:none; -webkit-box-shadow:none;" data-BookName="@Model.BookName" data-BookID="@Model.ID">
     <div class="card-horizontal" style="overflow: hidden;">
         <div class="img-square-wrapper">
             @{
