--- a/BookPoolV2/Views/Shared/_MyBook.cshtml
+++ b/BookPoolV2/Views/Shared/_MyBook.cshtml
@@ -39,7 +39,7 @@
                         @Model.BookCondition
                     </p>
                     <p class="card-text" style="">
-                        <button class="btn waves-effect waves-light red lighten-2">
+                        <button class="btn waves-effect waves-light red lighten-2 deleteMyBook" data-BookID="@Model.ID">
                             Delete
                         </button>
                     </p>
